Email Chain fix, Templating Fix, Delivery process fix
